Show pass fixed

--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 <body class="tmpl-www mod-en-us">
     <header class="header-admin">
         <div class="header-line">
-            <img src="./images/logo.png" alt="VimGuard Logo">
+          <a href="#"><img src="./images/logo.png" alt="VimGuard Logo"></a>
         </div>
     </header>
     <main class="main_admin">
@@ -67,9 +67,8 @@
           <!-- Отображение ошибки ввода пароля - класс "error_passoword" -->
           <div class="main_login_container_input_password_container">
             <input type="password" class="main_login_container_input_password" id="login_password" placeholder="Password">
-            <div class="password_show_btn">
-              <img src="./images/adminpanel/showpass.png" alt="Show password">
-            </div>
+            <button type="button" class="password_show_btn">
+            </button>
           </div>
           <div class="main_login_container_last_line">
             <div class="main_login_container_checkbox_container">
