--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
             </div>
             <a href="#" class="main_login_forgot_password">Forgot password?</a>
           </div>
-          <button type="button" class="main_login_continue_btn disabled" disabled>continue</button>
+          <button type="button" class="main_login_continue_btn">continue</button>
         </div>
         <div class="main_login_container_right">
           <a href="#" class="main_login_google">
