--- a/signup_password.html
+++ b/signup_password.html
@@ -68,7 +68,7 @@
         <!-- Отображение ошибки ввода пароля - класс "error_passoword" -->
         
                 <div class="main_login_container_input_password_container error_password">
-                  <input type="password" class="main_login_container_input_password" id="login_password" placeholder="Password">
+                  <input type="password" class="main_login_container_input_password input_password" id="password" placeholder="Password">
                   <button type="button" class="password_show_btn">
                   </button>
                 </div>
