--- a/faq_admin.html
+++ b/faq_admin.html
@@ -76,7 +76,7 @@
                 <div class="main_admin_questions_items">
                     <div class="main_admin_questions_item">
                         <h5 class="main_admin_questions_question">
-                            <span>How do I install VimGuard?</span>
+                            <span>Download and install you Vim product</span>
                         </h5>
                         <p class="main_admin_questions_answer">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -87,7 +87,7 @@
                     </div>
                     <div class="main_admin_questions_item">
                         <h5 class="main_admin_questions_question">
-                            <span>Why is VimGuard better than other apps?</span>
+                            <span>Locate your activation code</span>
                         </h5>
                         <p class="main_admin_questions_answer">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -102,7 +102,27 @@
                     </div>
                     <div class="main_admin_questions_item">
                         <h5 class="main_admin_questions_question">
-                            <span>What are the main features of VimGuard for Windows?</span> 
+                            <span>Transfer your subscription to another device</span> 
+                        </h5>
+                        <p class="main_admin_questions_answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Earum, ratione cupiditate eveniet similique quibusdam doloribus
+                            odio quam corporis molestiae ex! Iure, sapiente aliquam!
+                            Accusantium, exercitationem soluta hic tempora pariatur eligendi.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="main_admin_questions_chapter">
+                <div class="main_admin_questions_chapter_header">
+                    <p class="main_admin_questions_chapter_header_text">
+                        Installation and Activation
+                    </p>
+                </div>
+                <div class="main_admin_questions_items">
+                    <div class="main_admin_questions_item">
+                        <h5 class="main_admin_questions_question">
+                            <span>Download and install you Vim product</span>
                         </h5>
                         <p class="main_admin_questions_answer">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -113,13 +133,24 @@
                     </div>
                     <div class="main_admin_questions_item">
                         <h5 class="main_admin_questions_question">
-                            <span>What if I have questions? Do you have a support service?</span> 
+                            <span>Locate your activation code</span>
                         </h5>
                         <p class="main_admin_questions_answer">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Earum, ratione cupiditate eveniet similique quibusdam doloribus
                             odio quam corporis molestiae ex! Iure, sapiente aliquam!
                             Accusantium, exercitationem soluta hic tempora pariatur eligendi.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Earum, ratione cupiditate eveniet similique quibusdam doloribus
+                            odio quam corporis molestiae ex! Iure, sapiente aliquam!
+                            Accusantium, exercitationem soluta hic tempora pariatur eligendi.
+                        </p>
+                    </div>
+                    <div class="main_admin_questions_item">
+                        <h5 class="main_admin_questions_question">
+                            <span>Transfer your subscription to another device</span> 
+                        </h5>
+                        <p class="main_admin_questions_answer">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Earum, ratione cupiditate eveniet similique quibusdam doloribus
                             odio quam corporis molestiae ex! Iure, sapiente aliquam!
