Exchange devices names

--- a/main_product_list.html
+++ b/main_product_list.html
@@ -78,7 +78,7 @@
                             <label for="product-1" class="product_list_item_name">Ad Security</label>
                         </div>
                         <div class="main_page_product_list_container_item devices">
-                        one
+                            Windows, Mac, Android, iOS, Servers, Linux
                         </div>
                         <div class="main_page_product_list_container_item validity">
                         26.07.2021 - 26.07.2022
@@ -93,7 +93,7 @@
                             <label for="product-2" class="product_list_item_name">Internet Security</label>
                         </div>
                         <div class="main_page_product_list_container_item devices">
-                            three
+                            Windows, Mac, Android, iOS, Servers, Linux
                         </div>
                         <div class="main_page_product_list_container_item validity">
                             26.07.2021 - 26.07.2022
@@ -108,7 +108,7 @@
                             <label for="product-3" class="product_list_item_name">Total Security</label>
                         </div>
                         <div class="main_page_product_list_container_item devices">
-                            three
+                            Windows, Mac, Android, iOS, Servers, Linux
                         </div>
                         <div class="main_page_product_list_container_item validity">
                             26.07.2021 - 26.07.2022
